Bugfixes: menu icon on mobile and responsive tables for groundhogs by country
The menu icon wasn't working on my iphone, so I am trying this.

Source:
- https://stackoverflow.com/questions/10813581/can-i-replace-the-expand-icon-of-the-details-element

Also reworded a sentence on the "groundhogs" page.
Also removed the underline from the "menu" button on focus/hover.

--- a/src/scss/elements/_details.scss
+++ b/src/scss/elements/_details.scss
@@ -6,7 +6,7 @@ details {
     @include mixins.button;
     display: list-item;
     width: fit-content;
-    list-style-type: '☰';
+    list-style-type: none;
     font-size: 120%;
     padding: 1px 6px 4px 5px;
 
@@ -14,10 +14,17 @@ details {
       font-size: 85%;
     }
 
+    &::-webkit-details-marker {
+      display: none;
+    }
+
+    &::before {
+      content: '☰';
+    }
+
     &:hover,
     &:focus {
       color: vars.$color-focus !important;
-      text-decoration: underline;
     }
 
     &:focus {
